--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.add-btn-close {
+    transform: rotate(45deg);
+    transition: all .3s ease-in;
+}
