--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,19 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #22222A;
 }
 h1,
 h2,
 h3,
 h4 {
-  font-family: 'Bevan';
-  font-weight: 400;
+  font-family: "Noto Serif", serif;
+  font-weight: 700;
+}
+
+p {
+  max-width: 80ch;
 }
 
 /**********     LINKS    **********/
@@ -19,6 +23,7 @@ h4 {
 a {
   color: #0069b2;
 }
+
 a:hover {
   text-decoration: none;
 }
@@ -27,11 +32,4 @@ a:hover {
 
 tbody th {
   font-weight: bold;
-}
-
-/**********     BUTTONS    **********/
-
-.add-btn-close {
-  transform: rotate(45deg);
-  transition: all 0.3s ease-in;
 }
